<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:background="@drawable/bg_homescreen"
    tools:context=".NotificationsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="61dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
            <!--Note: [when merging] Changed from Button to ImageButton -->
            <ImageButton
                android:id="@+id/button7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/settings_black_back_arrow"
                android:typeface="serif" /> </LinearLayout>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/notifications_header"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:background="@drawable/notifications_header"
                android:layout_weight="1" /> </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="520dp"
        android:text="@string/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="141dp"
        android:layout_alignParentLeft="true" />


    <Switch
        android:id="@+id/switch2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="307dp"
        android:text="@string/new_course_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="192dp"
        android:layout_alignParentLeft="true" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="243dp"
        android:text="@string/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="243dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-1dp" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="454dp"
        android:text="@string/course_announcements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="294dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-1dp" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:text="@string/upcoming_due_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="345dp"
        android:layout_alignParentLeft="true" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textSize="18dp"
        android:paddingLeft="40dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="379dp"
        android:text="@string/calendar_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="396dp"
        android:layout_alignParentLeft="true" />
</RelativeLayout>