<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivityPage">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        tools:layout_editor_absoluteX="0dp"></LinearLayout>

    <ImageView
        android:id="@+id/dashboard"
        android:layout_width="385dp"
        android:layout_height="61dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/settings_header"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!-- changed to ImageButton -->
    <ImageButton
        android:id="@+id/BackButtonSettings"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:layout_weight="1"
            android:text="@string/log_out"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/blue_rounded_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonNotif"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:layout_weight="1"
            android:text="Notification Preferences"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="@drawable/black_rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonPrivacy"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="@drawable/black_rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNotif"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button13"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/privacy_settings"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="@drawable/black_rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPrivacy"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

